--- a/main.ipynb
+++ b/main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "3d171e95",
    "metadata": {},
    "outputs": [],
@@ -641,7 +641,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "nnFBA2",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -655,7 +655,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
