--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -568,14 +568,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d3fbb643",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "c489879f",
    "metadata": {},
@@ -896,15 +888,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "da94b249",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[37]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      3\u001b[39m b = \u001b[32m4\u001b[39m\n\u001b[32m      4\u001b[39m a = \u001b[32m4\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m \u001b[38;5;28;01mwhile\u001b[39;00m(\u001b[38;5;28;01mTrue\u001b[39;00m):\n\u001b[32m      6\u001b[39m     a = \u001b[32m5\u001b[39m\n\u001b[32m      8\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mlonely, I\u001b[39m\u001b[33m'\u001b[39m\u001b[33mm so lonely\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: "
+     ]
+    }
+   ],
+   "source": [
+    "#debugging test\n",
+    "a = 5 \n",
+    "b = 4\n",
+    "a = 4\n",
+    "while(True):\n",
+    "    a = 5\n",
+    "\n",
+    "print(\"lonely, I'm so lonely\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 35,
    "id": "af120495",
    "metadata": {},
    "outputs": [
@@ -912,7 +925,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "this statement is new\n",
       "rate: 0.009999703608785035, h(z): 0.9999703608785036, biomass: 0.01\n",
       "rate: 0.009999992728075013, h(z): 0.9999698202940092, biomass: 0.010000294534023872\n",
       "rate: 0.01000548593519156, h(z): 0.9999595492996295, biomass: 0.010005890680477416\n",
